<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Strength Log</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="title_activity_add">Add Exercise</string>
    <string name="title_activity_settings">Settings</string>
    <string name="exerciseNameLabel">Name:</string>
    <string name="saveButton">Save</string>
    <string name="save_exercise">Save</string>
    <string name="empty_exercise_list">No exercises found</string>
    <string name="error_cannot_save_exercises">Unable to save exercises, SD card not mounted or unwritable.</string>
    <string name="error_cannot_save_muscles">Unable to save muscle group data, SD card not mounted or unwritable.</string>
    <string name="error_cannot_save_log">Unable to save log, SD card not mounted or unwritable.</string>
    <string name="title_exercise_list">Simple Strength Log</string>
    <string name="title_activity_log">Log</string>
    <string name="currentLogLabel">Today:</string>
    <string name="previousLogLabel">Previously:</string>
    <string name="restTimeLabel">Seconds between sets:</string>
    <string name="restTimeDefault">90</string>
    <string name="undoButtonLabel">Undo</string>
    <string name="saveAndRestButtonLabel">Save &amp; Rest</string>
    <string name="exerciseNameHint">Exercise Name</string>
    <string name="setTagsButton">Set Muscles</string>
    <string name="title_activity_drop_down">DropDownActivity</string>
    <string name="action_settings">Settings</string>    
    <string name="menu_filter">Filter</string>
    <string name="context_menu_log">Log</string>
    <string name="context_menu_favorite">Favorite</string>
    <string name="context_menu_unfavorite">Unfavorite</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_edit">Edit</string>
    <string name="addFavoriteCheckBoxLabel">Favorite</string>
    <string name="doneCheckMark">✓</string>
    <string name="repsPickerView">Reps</string>
    <string name="weightPickerLabel">Weight</string>
    <string name="weightPickerLabelImperial">Pounds</string>
    <string name="weightPickerLabelMetric">Kilograms</string>
    <string name="heaviestDumbbell">220</string>
    <string name="barbellWeight">45</string>
    <string-array name="plateSizes">
        <item>45</item>
        <item>25</item>
        <item>35</item>
        <item>5</item>
        <item>2.5</item>
        <item>10</item>
    </string-array>
    
</resources>
